fix: Remove redundant dark mode styling.
Fixes #15

--- a/app/globals.css
+++ b/app/globals.css
@@ -124,8 +124,4 @@
     color: var(--background);
   }
 
-  .dark .radio-button-label[data-state=checked] {
-    background-color: var(--foreground);
-    color: var(--background);
-  }
 }
